# cmics

./: .gitignore  LICENSE  README.md  configure.ac
scripts/: config  curl_test.sh  install
src/: Makefile  Makefile.am  cli.c  cli.h  cmics  cmics.1  com_reg.c  com_reg.h  coms.c  coms.h  constants.h  curses.c  curses.h  dirs.c  dirs.h  img  imgs.c  imgs.h  logic.c  logic.h  main.c  menu.c  menu.h  rm.c  rm.h  test.c  url.c  url.h  user_conf.h  utils.c  utils.h
